fix button not centered

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
 	background-image: url('img/header.jpg');
 	background-size: cover;
 	width: 100%;
-	height: 100%;
+	height: 90%;
 	text-align: center;
 }
 
@@ -46,8 +46,7 @@ header {
 
 #header-text h2 {
 	margin-top: 3%;
-	font-size: 2.4em;
-	font-weight: normal;
+	font-size: 1.8em;
 }
 
 #header-text p {
@@ -60,8 +59,8 @@ header {
 }
 
 #alpha-button img {
-	margin-top: 10%;
-	height: 10%;
+	margin-top: 8%;
+	height: 9%;
 }
 
 #menu {
@@ -222,7 +221,7 @@ footer {
 	text-align: center;
 	color: #333;
 	font-weight: 700;
-	background-color: #3ddc84;
+	background-color: #fefefe;
 	padding: 10px 20px 10px 20px;
 	border-radius: 80px;
 }
